# blog-forge

./: BlogForge_技术设计文档.md  BlogForge_数据库设计文档.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.trae/rules/: project_rules.md
.trae/specs/blogforge-init/: checklist.md  spec.md  tasks.md
.trae/specs/preview-feature/: checklist.md  spec.md  tasks.md
blogforge/: index.html  package-lock.json  package.json  tailwind.config.js
blogforge/src/: App.tsx  index.css
blogforge/src-tauri/: Cargo.toml  tauri.conf.json
blogforge/src-tauri/src/: database.rs  error.rs  lib.rs  main.rs  models.rs
blogforge/src-tauri/src/commands/: article.rs  tag.rs
blogforge/src-tauri/src/services/: article.rs  mod.rs
blogforge/src/services/: api.ts
blogforge/src/stores/: appStore.ts
blogforge/src/types/: index.ts
doc/: BlogForge_PRD_产品需求文档.md  BlogForge_UIUX设计规范.md  BlogForge_开发规范文档.md  BlogForge_技术设计文档.md
scripts/: generate-icons.mjs
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/commands/: article.rs  config.rs  deploy.rs  image.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/deploy/: cos.rs  mod.rs
src-tauri/src/generator/: mod.rs
src-tauri/src/imagebed/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: article.rs  category.rs  mod.rs  (+5 more)
src/hooks/: useTheme.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/stores/: articleStore.ts  configStore.ts  deployStore.ts  imageStore.ts
(+30 files in other folders)
