[package]
name = "blogforge"
version = "0.1.0"
description = "BlogForge - 桌面端博客管理系统"
authors = ["BlogForge Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "blogforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
slug = "0.1"
directories = "5"
once_cell = "1"
parking_lot = "0.12"
